# rust-onion-example

./: Cargo.toml  README.md
application/: Cargo.toml
application/src/: main.rs
data/: Cargo.toml
data/src/: entity.rs  lib.rs  provider.rs  repository.rs
data/src/entity/: sample_model.rs
data/src/repository/: sample_model.rs
di/: Cargo.toml
di/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs  model.rs  provider.rs  repository.rs
domain/src/model/: sample_model.rs  task.rs  user.rs
domain/src/provider/: sample_model_repository.rs
domain/src/repository/: sample_model.rs  task.rs  user.rs
infra/: Cargo.toml
infra/migrations/: 20220726063538_create_tasks_table.sql
infra/src/: lib.rs  provider.rs  repository.rs
infra/src/repository/: task.rs
presentation/: Cargo.toml
presentation/src/: api_error.rs  di_container.rs  handler.rs  main.rs
presentation/src/handler/: create_task.rs  fetch_task.rs  list_tasks.rs  postpone_task.rs  task_detail_response.rs  update_task.rs
use_case/: Cargo.toml
use_case/src/: task.rs
use_case/src/task/: create_task.rs  error.rs  fetch_task.rs  list_tasks.rs  postpone_task.rs  task_detail_dto.rs  update_task.rs
usecase/: Cargo.toml
usecase/src/: task.rs
