[package]
name = "rust-layered-example"
version = "0.1.0"
authors = ["Pocket7878 <poketo7878@gmail.com>"]
edition = "2018"

[dependencies]
domain = { path = "../domain" }
data = { path = "../data" }
clap = "2.33.0"
serde = "1.0"
serde_yaml = "0.8.11"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }