[package]
name = "data"
version = "0.1.0"
authors = ["Pocket7878 <poketo7878@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.47"
async-trait = "0.1.24"