[package]
authors = ["Pocket7878 <poketo7878@gmail.com>"]
edition = "2021"
name = "infra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
domain = {path = "../domain"}
sqlx = {version = "0.6.0", features = ["sqlite", "time", "runtime-tokio-rustls"]}
time = {version = "0.3.11", features = ["serde", "parsing"]}
